# bitcoin-simulator

./: .gitignore  CMakeLists.txt  README.md  final_data.xlsx  makefile
BlockGuard/: MarkPBFT_peer.cpp  SmartShard.hpp  main.cpp
BlockGuard/Experiments/: SmartShards_Experiments.h
BlockGuard/QuickShards/: quickshards.cpp  quickshards.h
BlockGuard/SmartShards/: SmartShard.hpp
BlockGuard/jmuzina_bitcoin/: BitcoinMessage.hpp  BitcoinMiner.cpp  BitcoinMiner.hpp  bitcoinMessage.hpp  bitcoinPeer.cpp  bitcoinPeer.hpp
Tests/: ByzantineNetwork_Test.cpp  ByzantineNetwork_Test.hpp  NetworkTests.cpp  NetworkTests.hpp  PBFTPeerTest.cpp  PBFTPeerTest.hpp  PBFTPeer_Sharded_Test.cpp  PBFTPeer_Sharded_Test.hpp  PBFTReferenceCommittee_Test.cpp  PBFTReferenceCommittee_Test.hpp  main.cpp  test.cpp
Tests/Common/: ByzantineNetwork_Test.cpp  ByzantineNetwork_Test.hpp  NetworkTests.hpp
Tests/PBFT/: PBFTPeerTest.cpp  PBFTPeerTest.hpp  PBFTPeer_Sharded_Test.cpp  PBFTPeer_Sharded_Test.hpp  PBFTReferenceCommittee_Test.cpp  PBFTReferenceCommittee_Test.hpp
Tests/SmartShards/: SmartShards_Test.cpp  SmartShards_Test.h
src/: ExamplePeer.cpp  ExamplePeer.hpp  main.cpp
src/BlockGuard/: params_Blockguard.hpp
src/BlockGuard/Experiments/: Sharded_PBFT_Experiments.cpp  Sharded_PBFT_Experiments.hpp  Sharded_POW_Experiments.hpp  Sharded_SBFT_Experiments.cpp  Sharded_SBFT_Experiments.hpp  metrics.hpp  refComExperiments.cpp  refComExperiments.hpp
src/Common/: ByzantineNetwork.hpp  Network.hpp  Packet.hpp  Peer.hpp
src/Experiments/: Sharded_POW_Experiments.cpp  metrics.cpp
src/PBFT/: DS_PBFT_Peer.hpp  PBFTPeer_Sharded.cpp  PBFTPeer_Sharded.hpp  PBFTReferenceCommittee.cpp  PBFTReferenceCommittee.hpp  PBFT_Peer.cpp  PBFT_Peer.hpp  SmartShardPBFT_peer.cpp  SmartShardPBFT_peer.hpp
src/SBFT/: SBFTReferenceCommittee.cpp  SBFTReferenceCommittee.hpp  syncBFT_Committee.cpp
src/SmartShards/: SmartShard.cpp  SmartShard.hpp  params_SmartShards.h
src/SmartShards/Experiments/: SmartShards_Experiments.cpp  SmartShards_Experiments.h
src/bCoin/: bCoinReferenceCommittee.cpp  bCoinReferenceCommittee.hpp  bCoin_Committee.cpp
